# dotfiles

./: .gitignore  .sops.yaml  AGENTS.md  CLAUDE.md  README.md  REUSE.toml  flake.nix
.github/workflows/: cache-gc.yaml  ci.yaml  ci.yml  (+1 more)
.zed/: settings.json
LICENSES/: LicenseRef-ProjectMoon-Fanwork.txt  MIT.txt
claude/: CLAUDE.md
home/: dot_Brewfile
lefthook/: flake8.toml  git-common.toml  git-common.yml  git-private.toml  git-private.yml  git-utils.toml  git-utils.yml  gitleaks.toml  gitlint.toml  ruff.toml
nix/apps/update-pins/: Cargo.toml  candidate-package.nix  default.nix  smoke.nix
nix/apps/update-pins/src/: build.rs  cli.rs  codex_app.rs  command.rs  engine.rs  error.rs  fetch.rs  ledger.rs  lib.rs  main.rs  pins.rs  policy.rs  prefetch.rs  registry.rs  shellfirm.rs  smoke.rs  targets.rs  transaction.rs  upstream.rs  validation.rs  value_validation.rs
nix/apps/update-pins/src/fixtures/: codex-app-appcast.xml  nix-hash-mismatch-legacy-wanted.stderr  nix-hash-mismatch-legacy-wanted.stderr.license  nix-hash-mismatch-multiple.stderr  nix-hash-mismatch-multiple.stderr.license  nix-hash-mismatch-nested.stderr  nix-hash-mismatch-nested.stderr.license  nix-hash-mismatch.stderr  nix-hash-mismatch.stderr.license
secrets/: README.md  ssh-private.conf  ssh-private.yaml
tests/: apply-nix-settings.bats  apply-secrets.bats  apply-winget.bats  aws-login.bats  claude-wrapper.bats  codex-wrapper.bats  curl-fetch.bats  darwin-apps.bats  drawio-headless.bats  gh-api-get.bats  ghq-fetch-all.bats  herdr-wrapper.bats  home-manager-apps.bats  pi-package-manager.bats  pi-wrapper.bats  test-helper.bash  update-pins-smoke-workflow.bats  update-pins.bats  validate-gh-api.bats  wsl-set-ssh-auth-sock.bats
(+204 files in other folders)
